force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/Zumzum__Purchase_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Purchase Invoice Line Item</label>
    <nameField>
        <label>Purchase lnvoice Lineitem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>