force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Allocate_To__c.field-meta.xml
<CustomField>
    <fullName>Allocate_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocate To</label>
    <referenceTo>Zumzum__Purchase_Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>