force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Purchase Invoice Line Items</relationshipLabel>
    <relationshipName>Purchase_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>