force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debit_Amount__c</fullName>
    <formula>IF(ISPICKVAL(Zumzum__Purchase_Invoice__r.Zumzum__Type__c, &quot;Purchase Credit&quot;), -1 * Zumzum__Total_Gross__c, Zumzum__Total_Gross__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>