force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Invoice Line Items</relationshipLabel>
    <relationshipName>Purchase_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>