force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Company__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company</label>
    <referenceTo>Zumzum__Company__c</referenceTo>
    <relationshipLabel>Purchase Invoice Line Items</relationshipLabel>
    <relationshipName>Purchase_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>