force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Company_Currency__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Company_Currency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company Currency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Zumzum__Currency__c.Zumzum__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Zumzum__Currency__c</referenceTo>
    <relationshipLabel>Purchase Invoice Line Items</relationshipLabel>
    <relationshipName>Purchase_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>