force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Company_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Company_Net_Total__c</fullName>
    <label>Company Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>