force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Custom_Rate__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Custom_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Rate</label>
    <type>Checkbox</type>
</CustomField>