force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Dimension_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 1</label>
    <referenceTo>Zumzum__Dimension__c</referenceTo>
    <relationshipLabel>Purchase Invoice Line Items</relationshipLabel>
    <relationshipName>Purchase_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>