force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Dimension_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 2</label>
    <referenceTo>Zumzum__Dimension__c</referenceTo>
    <relationshipLabel>Purchase Invoice Line Items (Dimension 2)</relationshipLabel>
    <relationshipName>Purchase_Invoice_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>