force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Foreign_Tax__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Foreign_Tax__c</fullName>
    <label>Foreign Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>