force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Item_Received__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Item_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item Received</label>
    <type>Checkbox</type>
</CustomField>