force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Narrative__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Narrative__c</fullName>
    <label>Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>