force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Nominal_Account__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Nominal_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nominal Account</label>
    <referenceTo>Zumzum__Nominal_Account__c</referenceTo>
    <relationshipLabel>Purchase Invoice Line Items</relationshipLabel>
    <relationshipName>Purchase_Invoice_Line_Items_del</relationshipName>
    <type>Lookup</type>
</CustomField>