force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Purchase_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Purchase_Invoice__c</fullName>
    <label>Purchase Invoice</label>
    <referenceTo>Zumzum__Purchase_Invoice__c</referenceTo>
    <relationshipLabel>Purchase Invoice Line Items</relationshipLabel>
    <relationshipName>Purchase_Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>