force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Purchase_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Purchase_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line Item</label>
    <referenceTo>Zumzum__Purchase_Order_Line_Items__c</referenceTo>
    <relationshipLabel>Purchase Invoice Line Items</relationshipLabel>
    <relationshipName>Purchase_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>