force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Ready_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Ready_To_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready To Pay</label>
    <type>Checkbox</type>
</CustomField>