force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Serial_No__c</fullName>
    <label>Serial No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>