force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Tax_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Rate</label>
    <referenceTo>Zumzum__Tax_Rate__c</referenceTo>
    <relationshipName>Purchase_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>