force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__Total_Gross__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__Total_Gross__c</fullName>
    <label>Total Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>