force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/fields/Zumzum__UID__c.field-meta.xml
<CustomField>
    <fullName>Zumzum__UID__c</fullName>
    <displayFormat>PILIUID-{0000000000}</displayFormat>
    <label>UID</label>
    <type>AutoNumber</type>
</CustomField>