force-app/main/default/objects/Zumzum__Purchase_Invoice_Line_Item__c/validationRules/MandatoryCourse.validationRule-meta.xml
<ValidationRule>
    <fullName>MandatoryCourse</fullName>
    <active>true</active>
    <description>Course selection should be mandatory when raising a venue hire, subcontractor fees or travel invoice</description>
    <errorConditionFormula>AND(
OR(
Zumzum__Nominal_Account__r.Zumzum__Nominal_Code__c == &apos;5157&apos;,
Zumzum__Nominal_Account__r.Zumzum__Nominal_Code__c == &apos;5130&apos;,
Zumzum__Nominal_Account__r.Zumzum__Nominal_Code__c == &apos;5150&apos;
),
ISBLANK(Course__c), 
NOT($Permission.Override_Purchase_Invoice_Line_Item_Validation)
)</errorConditionFormula>
    <errorMessage>Please specify a Course for any Venue, Subcontractor or Travel line items.</errorMessage>
</ValidationRule>